test/scripted/compilation2/errors/too_few_args_to_infer_generic_args.bnj
# test:subtest
# test:error 7:5 "too few arguments to infer generic parameter values"

func f[T](a: T) {}

func main() {
    f();
}

# test:subtest
# test:error 16:5 "too few arguments to infer generic parameter values"

func f[T](a: i32, b: T) {}

func main() {
    f(10);
}
